# routes/index.js
@@ -2,6 +2,7 @@ const express = require("express");
 const router = express.Router();
 
 router.use("/books", require("./books"));
+router.use("/users", require("./users"));
 router.use("/", require("./swagger"));
 
 module.exports = router;
